# sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_template.sh
.github/: linter.yml
.github/workflow/: build-run-app.yml
.github/workflows/: linter.yml
code-review/: ted.txt
flowchart/: SampleAppFlowchart.pptx
fsw/: CMakeLists.txt
fsw/cfs/: CMakeLists.txt
fsw/cfs/mission_inc/: sample_perfids.h
fsw/cfs/platform_inc/: sample_msgids.h  sample_platform_cfg.h
fsw/cfs/src/: sample_app.c  sample_app.h  sample_device.c  sample_device.h  sample_events.h  sample_msg.h  sample_version.h
fsw/cfs/unit-test/: CMakeLists.txt
fsw/cfs/unit-test/coveragetest/: coveragetest_sample_app.c  coveragetest_sample_device.c  sample_app_coveragetest_common.h
fsw/cfs/unit-test/inc/: ut_sample_app.h
fsw/cfs/unit-test/stubs/: libuart_stubs.c  sample_device_stubs.c
fsw/fprime/: library.cmake
fsw/fprime/mission_inc/: sample_perfids.h
fsw/fprime/platform_inc/: sample_msgids.h  sample_platform_cfg.h
fsw/fprime/sample_src/: CMakeLists.txt  SampleSim.cpp  SampleSim.fpp  SampleSim.hpp
fsw/fprime/src/: library.cmake  sample_app.c  sample_app.h  sample_events.h  sample_msg.h  sample_version.h
fsw/fprime/src/Components/SampleSim/: CMakeLists.txt  SampleSim.hpp
fsw/fprime/src/SampleSim/: CMakeLists.txt  SampleSim.cpp
fsw/mission_inc/: sample_app_perfids.h  sample_perfids.h  sample_platform_cfg.h
fsw/platform_inc/: sample_app_msgids.h  sample_app_platform_cfg.h  sample_msgids.h  sample_platform_cfg.h
fsw/shared/: sample_device.c  sample_device.h
fsw/src/: sample_app.c  sample_app.h  sample_app_events.h  sample_app_msg.h  sample_app_version.h  sample_childtask.c  sample_childtask.h  sample_device.c  sample_device.h  sample_device_msg.h  sample_events.h  sample_msg.h  sample_stf1_app.c  sample_version.h
fsw/standalone/: CMakeLists.txt  device_cfg.h  sample_checkout.c  sample_checkout.h
fsw/unit-test/: CMakeLists.txt
fsw/unit-test/coveragetest/: coveragetest_sample_app.c  sample_app_coveragetest_common.h
fsw/unit-test/inc/: ut_sample_app.h
gsw/: SAMPLE_SIM_CMD.txt
gsw/SAMPLE/cmd_tlm/: SAMPLE_CMD.txt  SAMPLE_TLM.txt
gsw/SAMPLE/lib/: sample_lib.rb
gsw/SAMPLE/procedures/: sample_test.rb
gsw/SAMPLE/procedures/tests/: sample_app_test.rb  sample_ast_test.rb  sample_cpt_test.rb  sample_device_test.rb  sample_lpt_test.rb
sim/: CMakeLists.txt  README.md
sim/inc/: sample_42_data_provider.hpp  sample_data_point.hpp  sample_data_provider.hpp  sample_hardware_model.hpp
sim/src/: sample_42_data_provider.cpp  sample_data_point.cpp  sample_data_provider.cpp  sample_hardware_model.cpp  sample_sim.cpp
support/: CMakeLists.txt  device_cfg.h  sample_checkout.c  sample_checkout.h
